--- a/index.html
+++ b/index.html
@@ -87,33 +87,20 @@
 </div>
 
 <script>
-/* ========================
-   CONFIGURE AQUI SEU FIREBASE
-   Vá ao Firebase Console > Project settings > SDK config e cole o objeto firebaseConfig
-   ======================== */
-const firebaseConfig = /* COLE AQUI SUA FIREBASE CONFIG */ {
-  // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+/* CONFIG FIREBASE */
 const firebaseConfig = {
-  apiKey: "AIzaSyAVYJ0l4XDFn5qXkid75LI7iggX3FlxGS8",
-  authDomain: "escalaconfig.firebaseapp.com",
-  projectId: "escalaconfig",
-  storageBucket: "escalaconfig.firebasestorage.app",
-  messagingSenderId: "393446307606",
-  appId: "1:393446307606:web:69f1f038edf659739e8237",
-  measurementId: "G-160CC381TP"
+  apiKey: "...",
+  authDomain: "...",
+  projectId: "...",
+  storageBucket: "...",
+  messagingSenderId: "...",
+  appId: "...",
+  measurementId: "..."
 };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-};
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
 
 if (!firebaseConfig || !firebaseConfig.projectId) {
   document.getElementById('statusApp').innerText = '⚠️ Cole seu firebaseConfig no arquivo index.html';
