--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 
 <script src="assets/js/firebase.js"></script>
-<script src="assets/js/app.js"></script>
+<script type="module" src="app.js"></script>
 </head>
 
 <body>
